🐛 Add different workaround for Safari wrapping, fixes #32 again.
Revert 'Add workaround for Safari wrapping, fixes #32' and attempt different fix

--- a/_sass/layout/_nav.scss
+++ b/_sass/layout/_nav.scss
@@ -46,14 +46,13 @@
 				@include vendor('transition', (
 					'font-size #{_duration(transition)} ease'
 				));
-				display: inline-block;
+				display: inline;
 				height: 2.25em;
 				line-height: 2.25em;
 				padding: 0 1.25em;
 				border: 0;
 				border-radius: _size(border-radius);
 				box-shadow: inset 0 0 0 1px transparent;
-				overflow: auto;
 
 				&:hover {
 					background-color: _palette(invert, border-bg);
